<resources>
    <string name="app_name">Quản Lý Vị Trí</string>
    <string name="tab_nhan_vien">Nhân Viên</string>
    <string name="tab_vi_tri">Vị Trí</string>
    <string name="tab_bao_cao">Báo Cáo</string>
    <string name="tab_cham_cong">Chấm Công</string>
    <string name="tab_luong">Lương</string>
    <string name="them_moi">Thêm mới</string>
    <string name="luu">Lưu</string>
    <string name="huy">Hủy</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="tim_kiem">Tìm kiếm nhân viên...</string>
</resources>